# shared/generated/swagger.json
@@ -288,6 +288,7 @@
 					"questionContent",
 					"students",
 					"groupQuestion",
+					"timeAsked",
 					"questionType"
 				],
 				"type": "object",
@@ -1006,7 +1007,7 @@
 				}
 			}
 		},
-		"/towns/{townID}/{officeHoursAreaId}/joinQuestion": {
+		"/towns/{townID}/{officeHoursAreaId}/{questionID}/joinQuestion": {
 			"patch": {
 				"operationId": "JoinOfficeHoursQuestion",
 				"responses": {
@@ -1056,6 +1057,14 @@
 						}
 					},
 					{
+						"in": "path",
+						"name": "questionID",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
 						"in": "header",
 						"name": "X-Session-Token",
 						"required": true,
@@ -1063,17 +1072,7 @@
 							"type": "string"
 						}
 					}
-				],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"type": "string"
-							}
-						}
-					}
-				}
+				]
 			}
 		},
 		"/towns/{townID}/{officeHoursAreaId}/leaveQuestion": {
@@ -1187,71 +1186,6 @@
 					{
 						"in": "path",
 						"name": "officeHoursAreaId",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"in": "header",
-						"name": "X-Session-Token",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
-		"/towns/{townID}/{officeHoursAreaId}/{questionId}/takeQuestion": {
-			"patch": {
-				"operationId": "TakeNextOfficeHoursQuestionWithQuestionID",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/TAModel"
-								}
-							}
-						}
-					},
-					"400": {
-						"description": "Invalid values specified",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/InvalidParametersError"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"towns"
-				],
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "townID",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"in": "path",
-						"name": "officeHoursAreaId",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"in": "path",
-						"name": "questionId",
 						"required": true,
 						"schema": {
 							"type": "string"
