# townService/generated/routes.ts
@@ -126,7 +126,7 @@ const models: TsoaRoute.Models = {
             "questionContent": {"dataType":"string","required":true},
             "students": {"dataType":"array","array":{"dataType":"string"},"required":true},
             "groupQuestion": {"dataType":"boolean","required":true},
-            "timeAsked": {"dataType":"double"},
+            "timeAsked": {"dataType":"double","required":true},
             "questionType": {"dataType":"string","required":true},
         },
         "additionalProperties": false,
@@ -472,7 +472,7 @@ export function RegisterRoutes(app: express.Router) {
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-        app.patch('/towns/:townID/:officeHoursAreaId/joinQuestion',
+        app.patch('/towns/:townID/:officeHoursAreaId/:questionID/joinQuestion',
             ...(fetchMiddlewares<RequestHandler>(TownsController)),
             ...(fetchMiddlewares<RequestHandler>(TownsController.prototype.joinOfficeHoursQuestion)),
 
@@ -480,8 +480,8 @@ export function RegisterRoutes(app: express.Router) {
             const args = {
                     townID: {"in":"path","name":"townID","required":true,"dataType":"string"},
                     officeHoursAreaId: {"in":"path","name":"officeHoursAreaId","required":true,"dataType":"string"},
+                    questionID: {"in":"path","name":"questionID","required":true,"dataType":"string"},
                     sessionToken: {"in":"header","name":"X-Session-Token","required":true,"dataType":"string"},
-                    officeHoursQuestionId: {"in":"body","name":"officeHoursQuestionId","required":true,"dataType":"string"},
             };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
@@ -549,34 +549,6 @@ export function RegisterRoutes(app: express.Router) {
 
 
               const promise = controller.getOfficeHoursQueue.apply(controller, validatedArgs as any);
-              promiseHandler(controller, promise, response, undefined, next);
-            } catch (err) {
-                return next(err);
-            }
-        });
-        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-        app.patch('/towns/:townID/:officeHoursAreaId/:questionId/takeQuestion',
-            ...(fetchMiddlewares<RequestHandler>(TownsController)),
-            ...(fetchMiddlewares<RequestHandler>(TownsController.prototype.takeNextOfficeHoursQuestionWithQuestionID)),
-
-            function TownsController_takeNextOfficeHoursQuestionWithQuestionID(request: any, response: any, next: any) {
-            const args = {
-                    townID: {"in":"path","name":"townID","required":true,"dataType":"string"},
-                    officeHoursAreaId: {"in":"path","name":"officeHoursAreaId","required":true,"dataType":"string"},
-                    questionId: {"in":"path","name":"questionId","required":true,"dataType":"string"},
-                    sessionToken: {"in":"header","name":"X-Session-Token","required":true,"dataType":"string"},
-            };
-
-            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-            let validatedArgs: any[] = [];
-            try {
-                validatedArgs = getValidatedArgs(args, request, response);
-
-                const controller = new TownsController();
-
-
-              const promise = controller.takeNextOfficeHoursQuestionWithQuestionID.apply(controller, validatedArgs as any);
               promiseHandler(controller, promise, response, undefined, next);
             } catch (err) {
                 return next(err);
