# townService/src/town/TownsController.ts
@@ -470,68 +470,6 @@ export class TownsController extends Controller {
     return officeHoursAreaReal.toQueueModel();
   }
 
-  // @Patch('{townID}/{officeHoursAreaId}/{questionId}/takeQuestion')
-  // @Response<InvalidParametersError>(400, 'Invalid values specified')
-  // public async takeNextOfficeHoursQuestionWithQuestionID(
-  //   @Path() townID: string,
-  //   @Path() officeHoursAreaId: string,
-  //   @Path() questionId: string,
-  //   @Header('X-Session-Token') sessionToken: string,
-  // ): Promise<TAModel> {
-  //   const curTown = this._townsStore.getTownByID(townID);
-  //   if (!curTown) {
-  //     throw new InvalidParametersError('Invalid town ID');
-  //   }
-  //   const curPlayer = curTown.getPlayerBySessionToken(sessionToken);
-  //   if (!curPlayer) {
-  //     throw new InvalidParametersError('Invalid session ID');
-  //   } else if (!isTA(curPlayer)) {
-  //     throw new InvalidParametersError('This player is not a TA');
-  //   }
-  //   const officeHoursArea = curTown.getInteractable(officeHoursAreaId);
-  //   if (!officeHoursArea || !isOfficeHoursArea(officeHoursArea)) {
-  //     throw new InvalidParametersError('Invalid office hours area ID');
-  //   }
-  //   if (!(<OfficeHoursAreaReal>officeHoursArea).takeQuestion(curPlayer, questionId)) {
-  //     throw new InvalidParametersError('Queue is empty or there are no available breakout rooms');
-  //   }
-  //   if (!curPlayer.currentQuestions || !curPlayer.breakoutRoomID) {
-  //     throw new InvalidParametersError('Queue is empty or there are no available breakout rooms');
-  //   }
-
-  //   /* Set TA's location to center of breakout room, used by players for teleporting */
-  //   const breakoutRoom = curTown.getInteractable(curPlayer.breakoutRoomID);
-  //   const location = (<BreakoutRoomAreaReal>breakoutRoom).areasCenter();
-  //   curPlayer.location.x = location.x;
-  //   curPlayer.location.y = location.y;
-  //   curPlayer.location.interactableID = curPlayer.breakoutRoomID;
-
-  //   // TODO: does addConvo area work for breakout rooms?
-  //   const questions = curPlayer.currentQuestions;
-  //   let questionType = '';
-  //   let studentIDs: string[] = [];
-  //   if (questions) {
-  //     questionType = questions[0].questionType;
-  //     questions.forEach(q => {
-  //       studentIDs = studentIDs.concat(q.studentsByID);
-  //     });
-  //   }
-  //   const success = curTown.addConversationArea({
-  //     id: curPlayer.breakoutRoomID,
-  //     topic: questionType,
-  //     occupantsByID: studentIDs.concat(curPlayer.id),
-  //   });
-  //   if (!success) {
-  //     throw new Error('Could not update breakout room');
-  //   }
-
-  //   (<OfficeHoursAreaReal>officeHoursArea).roomEmitter.emit(
-  //     'officeHoursQuestionTaken',
-  //     curPlayer.toModel(),
-  //   );
-  //   return curPlayer.toModel();
-  // }
-
   @Patch('{townID}/{officeHoursAreaId}/takeQuestions')
   @Response<InvalidParametersError>(400, 'Invalid values specified')
   public async takeNextOfficeHoursQuestionWithQuestionIDs(
@@ -717,12 +655,6 @@ export class TownsController extends Controller {
     try {
       newPlayer = await town.addPlayer(userName, socket, taPassword);
     } catch (e) {
-      if (e instanceof InvalidTAPasswordError) {
-        // TODO Toast that ta password is invalid
-      } else {
-        // TODO Toast that a BAD error occurrd
-      }
-      // return if error
       return;
     }
     assert(newPlayer.videoToken);
